Criação de cards e finalização da seção "about"

--- a/index.html
+++ b/index.html
@@ -55,11 +55,14 @@
      <div class="column-left">
          <img src="/images/profile-picture.jpeg" alt="">
       </div>
+      
     <div class="column-right">
        <h2>Quem sou eu</h2>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. At distinctio quos sit aliquam consectetur voluptatem nobis libero animi magni explicabo modi sunt, dolores a adipisci harum facere possimus quas? Amet.</p>
+        <p>Professora de Inglês em transição de carreira, com experiência
+          autônoma em suporte e manutenção de softwares</p>
         <a href="#">Baixar Currículo</a>
        </div>
+
       </div>
     </div>
   </div>
