Nova estilização e criação da section "serviços"

--- a/index.html
+++ b/index.html
@@ -70,6 +70,44 @@
 
 </section>
 
+<!--SERVICES-->
+<section class="services" id="services"> 
+    
+  <div class="max-width">   
+    <h2 class="tittle">Serviços</h2>    
+    <div class="service-content">
+      
+      <div class="card">
+        <div class="box">
+          <ion-icon name="code-outline"></ion-icon>
+          <div class="text"> Criação de websites </div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero quibusdam mollitia sequi quae recusandae temporibus ab tempora, explicabo, incidunt, similique est beatae repellat aliquid voluptatum quis officia! Vitae, sequi fuga.</p>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="box">
+          <ion-icon name="desktop-outline"></ion-icon>
+          <div class="text">Atualização de interfaces</div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero quibusdam mollitia sequi quae recusandae temporibus ab tempora, explicabo, incidunt, similique est beatae repellat aliquid voluptatum quis officia! Vitae, sequi fuga.</p>
+        </div>
+      </div>
+
+      <div class="card">
+        <div class="box">
+          <ion-icon name="bug-outline"></ion-icon>
+          <div class="text">Correção de bugs</div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero quibusdam mollitia sequi quae recusandae temporibus ab tempora, explicabo, incidunt, similique est beatae repellat aliquid voluptatum quis officia! Vitae, sequi fuga.</p>
+        </div>
+      </div>
+   
+
+    </div>
+  </div>
+</div>
+</div>
+
+</section>
 
 
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
